--- a/packages/react/runtime/package.json
+++ b/packages/react/runtime/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@lynx-js/react": "workspace:*",
+    "@lynx-js/react-transform": "workspace:*",
     "@types/react": "^18.3.23",
     "@vitejs/plugin-react": "4.5.1",
     "@vitest/coverage-v8": "^3.2.2",
