--- a/packages/react/transform/package.json
+++ b/packages/react/transform/package.json
@@ -10,6 +10,7 @@
   "main": "./main.js",
   "types": "./index.d.ts",
   "scripts": {
+    "build": "rslib build",
     "test": "vitest"
   },
   "dependencies": {
