--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ packages:
   - packages/react/runtime
   - packages/react/testing-library
   - packages/react/transform
+  - packages/react/transform/*
   - packages/react/worklet-runtime
   - packages/rspeedy/*
   - packages/testing-library/*
