chore(renovate): group linting and types

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -100,7 +100,13 @@
     {
       "groupName": "linting",
       "groupSlug": "linting",
-      "matchPackageNames": ["/eslint/"],
+      "matchPackageNames": [
+        "/eslint/",
+        "globals",
+        "husky",
+        "lint-staged",
+        "sort-package-json",
+      ],
     },
     {
       "groupName": "Typia",
@@ -123,6 +129,14 @@
       "groupName": "github-actions",
       "groupSlug": "github-actions",
       "matchManagers": ["github-actions"],
+    },
+    {
+      "groupName": "types",
+      "groupSlug": "types",
+      "matchPackageNames": [
+        "/^@tsconfig/*/",
+        "/^@types/*/",
+      ],
     },
   ],
   "postUpdateOptions": [
