chore(renovate): group `@prefresh/*`

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -87,6 +87,13 @@
       ],
     },
     {
+      "groupName": "Prefresh",
+      "groupSlug": "prefresh",
+      "matchPackageNames": [
+        "/@prefresh/*/"
+      ]
+    },
+    {
       "groupName": "API Extractor",
       "groupSlug": "api-extractor",
       "matchPackageNames": [
