refactor(react/worklet-runtime): replace ESBuild with Rslib

--- a/packages/react/worklet-runtime/package.json
+++ b/packages/react/worklet-runtime/package.json
@@ -31,11 +31,10 @@
     "src"
   ],
   "scripts": {
-    "build": "node scripts/build.js",
+    "build": "rslib build",
     "test": "vitest run --coverage"
   },
   "devDependencies": {
-    "@lynx-js/types": "3.3.0",
-    "esbuild": "^0.25.5"
+    "@lynx-js/types": "3.3.0"
   }
 }
