move to new pkg web-style-transformer

--- a/packages/web-platform/web-style-transformer/package.json
+++ b/packages/web-platform/web-style-transformer/package.json
@@ -19,5 +19,11 @@
     "Notice.txt",
     "CHANGELOG.md",
     "README.md"
-  ]
+  ],
+  "scripts": {
+    "build": "wasm-pack build --target web --out-dir dist --out-name index"
+  },
+  "devDependencies": {
+    "wasm-pack": "^0.13.1"
+  }
 }
