--- a/packages/web-platform/web-style-transformer/turbo.json
+++ b/packages/web-platform/web-style-transformer/turbo.json
@@ -4,16 +4,13 @@
   "tasks": {
     "build": {
       "dependsOn": [
-        "//#build",
         "^build"
       ],
       "inputs": [
-        "src",
-        "clang"
+        "src"
       ],
       "outputs": [
-        "dist",
-        "pkg"
+        "dist"
       ]
     }
   }
