fix: output `main.js`

--- a/packages/react/worklet-runtime/turbo.json
+++ b/packages/react/worklet-runtime/turbo.json
@@ -5,8 +5,8 @@
     "build": {
       "dependsOn": [],
       "inputs": [
-        "scripts",
-        "src"
+        "src",
+        "rslib.config.ts"
       ],
       "outputs": [
         "dist"
