ci: fix turbo.json for #1094
#1094

--- a/turbo.json
+++ b/turbo.json
@@ -27,7 +27,9 @@
     },
     "//#build": {
       "cache": false,
-      "dependsOn": []
+      "dependsOn": [
+        "@lynx-js/web-style-transformer#build"
+      ]
     }
   }
 }
