--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -37,6 +37,8 @@ overrides:
   "@rsbuild/core>@rspack/core": "$@rspack/core"
   "path-serializer": "^0.5.0"
 
+strictDepBuilds: true
+
 patchedDependencies:
   "@napi-rs/cli@2.18.4": "patches/@napi-rs__cli@2.18.4.patch"
   "@rollup/plugin-typescript": "patches/@rollup__plugin-typescript.patch"
@@ -44,6 +46,7 @@ patchedDependencies:
 onlyBuiltDependencies:
   - dprint
   - esbuild
+  - wasm-pack
 
 ignoredBuiltDependencies:
   - core-js
