fix: cache `build:wasm-pack`
See: https://github.com/lynx-family/lynx-stack/actions/runs/16216967734/job/45788929613?pr=1273

--- a/packages/web-platform/web-style-transformer/turbo.json
+++ b/packages/web-platform/web-style-transformer/turbo.json
@@ -15,7 +15,8 @@
     },
     "build:wasm-pack": {
       "dependsOn": [],
-      "cache": false
+      "inputs": [],
+      "outputs": []
     }
   }
 }
