--- a/packages/web-platform/web-style-transformer/package.json
+++ b/packages/web-platform/web-style-transformer/package.json
@@ -23,6 +23,7 @@
   ],
   "scripts": {
     "build": "wasm-pack build --target web --out-dir dist --out-name index --mode no-install",
+    "build:wasm-bindgen": "wasm-bindgen --version || cargo install wasm-bindgen",
     "build:wasm-pack": "wasm-pack --version || cargo install wasm-pack"
   }
 }
