feat: support SSR for all-on-ui
Implement SSR for Web #52

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,6 +95,9 @@ jobs:
             env:
               - ENABLE_SSR=true
               - TEST_FP_ONLY=true
+          - name: SSR-ALL-ON-UI
+            env:
+              - ENABLE_SSR=true
     with:
       runs-on: lynx-ubuntu-24.04-xlarge
       is-web: true
