--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,11 +77,16 @@ jobs:
       run: |
         export NODE_OPTIONS="--max-old-space-size=32768"
         pnpm --filter @lynx-js/web-tests run lh || echo "Lighthouse failed"
+
   playwright-linux:
     needs: build
-    uses: ./.github/workflows/workflow-test.yml
+    uses: ./.github/workflows/workflow-test-in-container.yml
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      TOS_AP_ACCESS_KEY: ${{ secrets.TOS_AP_ACCESS_KEY }}
+      TOS_AP_SECRET_KEY: ${{ secrets.TOS_AP_SECRET_KEY }}
+      TOS_AP_ENDPOINT: ${{ secrets.TOS_AP_ENDPOINT }}
+      TOS_AP_REGION: ${{ secrets.TOS_AP_REGION }}
     name: Playwright (${{ matrix.config.name }})
     strategy:
       matrix:
@@ -99,7 +104,7 @@ jobs:
             env:
               - ENABLE_SSR=true
     with:
-      runs-on: lynx-custom-dind
+      runs-on: lynx-container
       is-web: true
       codecov-flags: "e2e"
       run: |
@@ -108,6 +113,7 @@ jobs:
         export PLAYWRIGHT_JUNIT_OUTPUT_NAME=test-report.junit.xml
         pnpm --filter @lynx-js/web-tests run test --reporter='github,dot,junit,html'
         pnpm --filter @lynx-js/web-tests run coverage:ci
+
   test-api:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
