--- a/packages/web-platform/web-style-transformer/Cargo.toml
+++ b/packages/web-platform/web-style-transformer/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+inline-style-parser = { path = "../inline-style-parser" }
 js-sys = "0.3.77"
 lazy_static = "1.5.0"
 wasm-bindgen = "0.2.88"
