--- a/packages/react/runtime/tsconfig.json
+++ b/packages/react/runtime/tsconfig.json
@@ -12,6 +12,7 @@
     "path": "../worklet-runtime/tsconfig.json",
   }],
   "include": [
+    "compat",
     "debug",
     "jsx-dev-runtime",
     "jsx-runtime",
