--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -9,7 +9,7 @@ reviews:
 
   # Summary
   high_level_summary: true
-  high_level_summary_placeholder: "<!-- @coderabbitai summary -->"
+  high_level_summary_placeholder: "@coderabbitai summary"
 
   # Labeling
   # auto_apply_labels: true
