--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -19,7 +19,7 @@ reviews:
         Apply when the PR contains changes to either
           - `./packages/web-platform/**`
           - `./packages/webpack/template-webpack-plugin/src/WebEncodePlugin.ts`
-        Or when the linking issue has lable "platform:Web"
+        Or when the linked issue has lable "platform:Web"
     - label: "framework:React"
       instructions: |
         Apply when the PR contains changes to either
@@ -27,4 +27,4 @@ reviews:
           - `./packages/rspeedy/plugin-react/**`
           - `./packages/rspeedy/plugin-react-alias/**`
           - `./packages/webpack/react-webpack-plugin/**`
-        Or when the linking issue has lable "framework:React"
+        Or when the linked issue has lable "framework:React"
