--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -5,14 +5,14 @@ on:
         required: false
       LHCI_GITHUB_APP_TOKEN:
         required: false
-      TOS_AP_ACCESS_KEY:
-        required: false
-      TOS_AP_SECRET_KEY:
-        required: false
-      TOS_AP_ENDPOINT:
-        required: false
-      TOS_AP_REGION:
-        required: false
+      # TOS_AP_ACCESS_KEY:
+      #   required: false
+      # TOS_AP_SECRET_KEY:
+      #   required: false
+      # TOS_AP_ENDPOINT:
+      #   required: false
+      # TOS_AP_REGION:
+      #   required: false
     inputs:
       runs-on:
         required: true
@@ -43,12 +43,12 @@ jobs:
     permissions: {}
     container:
       image: ${{ inputs.is-web && 'mcr.microsoft.com/playwright:v1.54.1-noble' || null }}
-      env:
-        ACCESS_KEY: ${{ secrets.TOS_AP_ACCESS_KEY }}
-        SECRET_KEY: ${{ secrets.TOS_AP_SECRET_KEY }}
-        ENDPOINT: ${{ secrets.TOS_AP_ENDPOINT }}
-        BUCKET_NAME: actions
-        REGION: ${{ secrets.TOS_AP_REGION }}
+      # env:
+      #   ACCESS_KEY: ${{ secrets.TOS_AP_ACCESS_KEY }}
+      #   SECRET_KEY: ${{ secrets.TOS_AP_SECRET_KEY }}
+      #   ENDPOINT: ${{ secrets.TOS_AP_ENDPOINT }}
+      #   BUCKET_NAME: actions
+      #   REGION: ${{ secrets.TOS_AP_REGION }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
