refactor(rstest): migrate worklet-runtime test suite to rstest

--- a/packages/react/worklet-runtime/package.json
+++ b/packages/react/worklet-runtime/package.json
@@ -32,9 +32,11 @@
   ],
   "scripts": {
     "build": "rslib build",
-    "test": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "test:rs": "rstest"
   },
   "devDependencies": {
-    "@lynx-js/types": "3.3.0"
+    "@lynx-js/types": "3.3.0",
+    "@rstest/core": "catalog:rstest"
   }
 }
