--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,4 +36,5 @@
   "typescript.preferences.importModuleSpecifier": "relative",
   "typescript.preferences.preferTypeOnlyAutoImports": true,
   "typescript.preferences.importModuleSpecifierEnding": "js",
+  "rust-analyzer.check.command": "clippy",
 }
