fix: crash on chrome<96
https://github.com/wasm-bindgen/wasm-bindgen/issues/4211#issuecomment-2505965903

https://github.com/WebAssembly/binaryen/issues/7358

The rust toolchain enables WASM feature `reference types` by default.

However this feature is not supported by chromium lower than version 96

Therefore we found a workaround for it.

In this implementation we detect if browser supports `reference types` first.

If user's browser supported it, we load the wasm file with `reference types` on, otherwise we load the wasm file with `reference types` off.

--- a/packages/web-platform/web-style-transformer/package.json
+++ b/packages/web-platform/web-style-transformer/package.json
@@ -23,8 +23,13 @@
     "README.md"
   ],
   "scripts": {
-    "build": "wasm-pack build --target bundler --out-dir dist --out-name index --mode no-install && node -e \"require('fs').rmSync('dist/.gitignore', { force: true })\"",
+    "build": "pnpm run build:standard && pnpm run build:legacy",
+    "build:legacy": "RUSTFLAGS=-Cstrip=symbols wasm-pack build --target bundler --out-dir dist --out-name legacy --mode no-install && node -e \"require('fs').rmSync('dist/.gitignore', { force: true })\"",
+    "build:standard": "wasm-pack build --target bundler --out-dir dist --out-name standard --mode no-install && node -e \"require('fs').rmSync('dist/.gitignore', { force: true })\"",
     "build:wasm-bindgen": "wasm-bindgen --version || cargo install wasm-bindgen-cli",
     "build:wasm-pack": "wasm-pack --version || cargo install wasm-pack"
+  },
+  "dependencies": {
+    "wasm-feature-detect": "^1.8.0"
   }
 }
