--- a/packages/web-platform/web-style-transformer/package.json
+++ b/packages/web-platform/web-style-transformer/package.json
@@ -23,9 +23,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "pnpm run build:standard && pnpm run build:legacy",
-    "build:legacy": "RUSTFLAGS=-Cstrip=symbols wasm-pack build --target bundler --out-dir dist --out-name legacy --mode no-install && node -e \"require('fs').rmSync('dist/.gitignore', { force: true })\"",
-    "build:standard": "wasm-pack build --target bundler --out-dir dist --out-name standard --mode no-install && node -e \"require('fs').rmSync('dist/.gitignore', { force: true })\"",
+    "build": "node scripts/build.js",
     "build:wasm-bindgen": "wasm-bindgen --version || cargo install wasm-bindgen-cli",
     "build:wasm-pack": "wasm-pack --version || cargo install wasm-pack"
   },
