--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -14,7 +14,8 @@
       "@lynx-js/web-constants",
       "@lynx-js/web-mainthread-apis",
       "@lynx-js/web-worker-rpc",
-      "@lynx-js/web-worker-runtime"
+      "@lynx-js/web-worker-runtime",
+      "@lynx-js/web-style-transformer"
     ],
     [
       "@lynx-js/web-elements",
