--- a/packages/web-platform/inline-style-parser/Cargo.toml
+++ b/packages/web-platform/inline-style-parser/Cargo.toml
@@ -2,3 +2,9 @@
 name = "inline-style-parser"
 version = "0.0.0"
 edition = "2021"
+
+[depedencies]
+js-sys = "0.3.77"
+
+[dependencies]
+js-sys = "0.3.77"
