--- a/packages/web-platform/web-style-transformer/Cargo.toml
+++ b/packages/web-platform/web-style-transformer/Cargo.toml
@@ -11,6 +11,7 @@ inline-style-parser = { path = "../inline-style-parser" }
 js-sys = "0.3.77"
 lazy_static = "1.5.0"
 wasm-bindgen = "0.2.88"
+web-sys = { version = "0.3", features = ["console"] }
 
 [profile.release]
 opt-level = 3
