--- a/packages/web-platform/web-style-transformer/package.json
+++ b/packages/web-platform/web-style-transformer/package.json
@@ -24,8 +24,7 @@
   ],
   "scripts": {
     "build": "node scripts/build.js",
-    "build:wasm-bindgen": "wasm-bindgen --version || cargo install wasm-bindgen-cli",
-    "build:wasm-pack": "wasm-pack --version || cargo install wasm-pack"
+    "build:wasm-bindgen": "wasm-bindgen --version || cargo install wasm-bindgen-cli"
   },
   "dependencies": {
     "wasm-feature-detect": "^1.8.0"
