--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -210,8 +210,8 @@ jobs:
         runs-on:
           - name: Ubuntu
             label: lynx-ubuntu-24.04-medium
-          # - name: Windows
-          #   label: lynx-windows-2022-large
+          - name: Windows
+            label: lynx-windows-2022-large
     name: Vitest (${{ matrix.runs-on.name }})
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
