--- a/packages/web-platform/web-style-transformer/turbo.json
+++ b/packages/web-platform/web-style-transformer/turbo.json
@@ -7,10 +7,10 @@
         "build:wasm-bindgen"
       ],
       "inputs": [
-        "src"
+        "src/**"
       ],
       "outputs": [
-        "dist"
+        "dist/**"
       ]
     },
     "build:wasm-bindgen": {
