--- a/packages/web-platform/web-core-server/turbo.json
+++ b/packages/web-platform/web-core-server/turbo.json
@@ -8,10 +8,10 @@
         "^build"
       ],
       "inputs": [
-        "src"
+        "src/**"
       ],
       "outputs": [
-        "dist"
+        "dist/**"
       ]
     }
   }
