--- a/packages/react/worklet-runtime/turbo.json
+++ b/packages/react/worklet-runtime/turbo.json
@@ -5,11 +5,11 @@
     "build": {
       "dependsOn": [],
       "inputs": [
-        "src",
+        "src/**",
         "rslib.config.ts"
       ],
       "outputs": [
-        "dist"
+        "dist/**"
       ]
     }
   }
