--- a/packages/rspeedy/create-rspeedy/turbo.json
+++ b/packages/rspeedy/create-rspeedy/turbo.json
@@ -5,10 +5,10 @@
     "build": {
       "dependsOn": [],
       "inputs": [
-        "src"
+        "src/**"
       ],
       "outputs": [
-        "dist"
+        "dist/**"
       ]
     }
   }
