--- a/packages/rspeedy/plugin-react-alias/turbo.json
+++ b/packages/rspeedy/plugin-react-alias/turbo.json
@@ -7,11 +7,11 @@
     "build": {
       "dependsOn": [],
       "inputs": [
-        "src",
+        "src/**",
         "rslib.config.ts"
       ],
       "outputs": [
-        "dist"
+        "dist/**"
       ]
     }
   }
