--- a/turbo.json
+++ b/turbo.json
@@ -27,10 +27,7 @@
     },
     "//#build": {
       "cache": false,
-      "dependsOn": [],
-      "inputs": [
-        "**"
-      ]
+      "dependsOn": []
     }
   }
 }
