--- a/turbo.json
+++ b/turbo.json
@@ -27,7 +27,10 @@
     },
     "//#build": {
       "cache": false,
-      "dependsOn": []
+      "dependsOn": [],
+      "inputs": [
+        "**/*.{ts,tsx}"
+      ]
     }
   }
 }
