exclude declaration files from build inputs

--- a/turbo.json
+++ b/turbo.json
@@ -31,7 +31,8 @@
       "inputs": [
         "**/*.{ts,tsx}",
         ".github/**",
-        "!node_modules/**"
+        "!node_modules/**",
+        "!**/*.d.ts"
       ]
     }
   }
