--- a/website/package.json
+++ b/website/package.json
@@ -35,13 +35,12 @@
     "@rsbuild/plugin-sass": "1.3.3",
     "@rsbuild/plugin-type-check": "1.2.4",
     "@rsbuild/plugin-typed-css-modules": "1.0.2",
+    "@rspress/core": "2.0.0-beta.25",
     "@rspress/plugin-client-redirects": "2.0.0-beta.25",
-    "@rspress/shared": "2.0.0-beta.25",
     "@shikijs/transformers": "3.9.2",
     "@types/react": "npm:@types/react@^19.1.8",
     "@types/react-dom": "^19.1.6",
     "change-case": "^5.4.4",
-    "rspress": "2.0.0-beta.21",
     "tailwindcss": "^3.4.17"
   },
   "engines": {
