--- a/.github/workflows/nodejs-dependencies.yml
+++ b/.github/workflows/nodejs-dependencies.yml
@@ -21,7 +21,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   sherif:
-    runs-on: lynx-ubuntu-24.04-medium
+    runs-on: lynx-ubuntu-24.04-medium-verify
     timeout-minutes: 10
     permissions:
       contents: read
