--- a/.github/workflows/pull-request-content-check.yml
+++ b/.github/workflows/pull-request-content-check.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   validate-pr-title:
     name: Validate PR title
-    runs-on: lynx-ubuntu-24.04-medium
+    runs-on: lynx-ubuntu-24.04-medium-verify
     timeout-minutes: 10
     steps:
       # https://github.com/amannn/action-semantic-pull-request
