chore: improve ci

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -103,8 +103,7 @@ jobs:
       is-web: true
       codecov-flags: "e2e"
       run: |
-        export ${{ join(matrix.config.env, ' ') }}
-        export NODE_OPTIONS="--max-old-space-size=32768"
+        export NODE_OPTIONS="--max-old-space-size=32768" ${{ join(matrix.config.env, ' ') }}
         export PLAYWRIGHT_JUNIT_OUTPUT_NAME=test-report.junit.xml
         pnpm --filter @lynx-js/web-tests run test --reporter='github,dot,junit,html'
         pnpm --filter @lynx-js/web-tests run coverage:ci
