--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -56,6 +56,7 @@ onlyBuiltDependencies:
 
 ignoredBuiltDependencies:
   - "@biomejs/biome"
+  - "@parcel/watcher"
   - "@swc/core"
   - core-js
   - unrs-resolver
