chore: enable clippy in tests

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -89,4 +89,4 @@ jobs:
           components: clippy
           cache: false
       - name: Clippy
-        run: cargo clippy -- -D warnings
+        run: cargo clippy --tests -- -D warnings
