--- a/packages/rspeedy/plugin-react/package.json
+++ b/packages/rspeedy/plugin-react/package.json
@@ -56,6 +56,8 @@
     "@rsbuild/core": "catalog:rsbuild",
     "@rsbuild/plugin-sass": "1.3.5",
     "@rsbuild/plugin-typed-css-modules": "1.0.3",
+    "rsbuild-plugin-arethetypeswrong": "0.1.1",
+    "rsbuild-plugin-publint": "0.3.3",
     "tailwindcss": "^3.4.17",
     "type-fest": "^4.41.0",
     "typia": "9.7.1",
