--- a/packages/web-platform/web-core-server/package.json
+++ b/packages/web-platform/web-core-server/package.json
@@ -31,6 +31,8 @@
     "@lynx-js/web-constants": "workspace:*",
     "@lynx-js/web-elements-template": "workspace:*",
     "@lynx-js/web-mainthread-apis": "workspace:*",
-    "@lynx-js/web-worker-rpc": "workspace:*"
+    "@lynx-js/web-worker-rpc": "workspace:*",
+    "rsbuild-plugin-arethetypeswrong": "0.1.1",
+    "rsbuild-plugin-publint": "0.3.3"
   }
 }
