--- a/tsconfig.json
+++ b/tsconfig.json
@@ -124,7 +124,10 @@
     },
     {
       "path": "./packages/third-party"
-    }
+    },
+    {
+      "path": "./packages/postcss"
+    },
   ],
   "include": []
 }
