--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "typescript-eslint": "^8.39.1",
     "vitest": "^3.2.4"
   },
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.0",
   "engines": {
-    "node": ">=24"
+    "node": "^22 || ^24"
   }
 }
