--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "Apache-2.0",
   "type": "module",
   "scripts": {
+    "_internal:cargo:version": "cargo --version",
     "build": "tsc --build",
     "prepare": "husky && ts-patch install",
     "test": "vitest"
