--- a/packages/web-platform/web-style-transformer/turbo.json
+++ b/packages/web-platform/web-style-transformer/turbo.json
@@ -4,6 +4,7 @@
   "tasks": {
     "build": {
       "dependsOn": [
+        "//#_internal:cargo:version",
         "build:wasm-bindgen"
       ],
       "inputs": [
