--- a/biome.jsonc
+++ b/biome.jsonc
@@ -17,6 +17,7 @@
   "linter": {
     "enabled": true,
     "ignore": [
+      "benchmark/react/**",
       "coverage/**",
       "dist/**",
       "lib/**",
