--- a/.github/workflows/relative-ci.yml
+++ b/.github/workflows/relative-ci.yml
@@ -14,6 +14,7 @@ jobs:
   upload:
     timeout-minutes: 10
     strategy:
+      fail-fast: false
       matrix:
         project:
           - path: ./examples/react
