--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,6 +84,7 @@ jobs:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     name: Playwright (${{ matrix.config.name }})
     strategy:
+      fail-fast: false
       matrix:
         config:
           - name: Default
@@ -204,6 +205,7 @@ jobs:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
     strategy:
+      fail-fast: false
       matrix:
         runs-on:
           - name: Ubuntu
