--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -36,9 +36,10 @@ jobs:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
         with:
           persist-credentials: false
-      - uses: actions-rust-lang/setup-rust-toolchain@fb51252c7ba57d633bc668f941da052e410add48 # v1
+      - uses: ./.github/actions/rustup
         with:
-          cache-key: test-${{ runner.os }}
+          key: test
+          save-if: ${{ github.ref_name == 'main' }}
       - name: Install llvm-cov and nextest
         uses: taiki-e/install-action@ad95d4e02e061d4390c4b66ef5ed56c7fee3d2ce # v2
         with:
