--- a/.github/actions/rustup/action.yml
+++ b/.github/actions/rustup/action.yml
@@ -22,10 +22,10 @@ runs:
     - name: Install rustup, if needed
       if: runner.os != 'Windows'
       shell: bash
-      run: |
+      run: | # zizmor: ignore[github-env] This action would only run on pull_request
         if ! command -v rustup &> /dev/null ; then
           curl --proto '=https' --tlsv1.2 --retry 10 --retry-connrefused -fsSL "https://sh.rustup.rs" | sh -s -- --default-toolchain none -y
-          echo "${CARGO_HOME:-$HOME/.cargo}/bin" >> $GITHUB_PATH
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
         fi
 
     - name: Get toolchain
