--- a/packages/react/transform/turbo.json
+++ b/packages/react/transform/turbo.json
@@ -7,9 +7,7 @@
       "outputs": ["index.d.ts", "index.cjs", "*.node"]
     },
     "build:wasm": {
-      "dependsOn": [
-        "//#_internal:cargo:version"
-      ],
+      "dependsOn": [],
       "inputs": ["src/**/*.rs", "src/wasm.js", "build.rs", "Cargo.toml", "scripts/build_wasm.sh"],
       "outputs": ["dist/wasm.cjs"]
     },
