--- a/benchmark/react/package.json
+++ b/benchmark/react/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "bench": "npm-run-all bench:*",
+    "bench": "pnpm run --sequential --stream --aggregate-output '/^bench:.*/'",
     "bench:001-fib": "benchx_cli run dist/001-fib.lynx.bundle",
     "bench:002-hello-reactLynx": "benchx_cli run dist/002-hello-reactLynx.lynx.bundle --wait-for-id=stop-benchmark-true",
     "build": "rspeedy build",
     "dev": "rspeedy dev",
-    "perfetto": "npm-run-all perfetto:*",
-    "perfetto:001-fib": "benchx_cli -o dist/001-fib.ptrace run dist/001-fib.lynx.bundle",
-    "perfetto:002-hello-reactLynx": "benchx_cli -o dist/002-hello-reactLynx.ptrace run dist/002-hello-reactLynx.lynx.bundle --wait-for-id=stop-benchmark-true"
+    "perfetto": "pnpm run --sequential --stream --aggregate-output '/^perfetto:.*/'",
+    "perfetto:001-fib": "benchx_cli -o dist/001-fib.ptrace run dist/001-fib.lynx.bundle --repeat=1",
+    "perfetto:002-hello-reactLynx": "benchx_cli -o dist/002-hello-reactLynx.ptrace run dist/002-hello-reactLynx.lynx.bundle --repeat=5 --wait-for-id=stop-benchmark-true"
   },
   "dependencies": {
     "@lynx-js/react": "workspace:*",
@@ -19,7 +19,6 @@
     "empathic": "^2.0.0",
     "event-target-polyfill": "^0.0.4",
     "magic-string": "^0.30.17",
-    "npm-run-all": "4.1.5",
     "tinybench": "^5.0.0"
   },
   "devDependencies": {
