feat(create-rspeedy): use TS project references

--- a/.dprint.jsonc
+++ b/.dprint.jsonc
@@ -15,6 +15,7 @@
       ".vscode/settings.json",
       "tsconfig.json",
       "tsconfig.build.json",
+      "tsconfig.node.json",
       "api-extractor.json",
     ],
   },
