fix: temp fix for not exporting signals

--- a/packages/react/runtime/package.json
+++ b/packages/react/runtime/package.json
@@ -12,7 +12,8 @@
     "jsx-runtime",
     "lazy",
     "lepus",
-    "src"
+    "src",
+    "signals"
   ],
   "scripts": {
     "test": "vitest run --coverage"
