--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -174,6 +174,7 @@
     "components",
     "refresh/*",
     "runtime",
+    "runtime/signals",
     "transform",
     "types",
     "docs",
@@ -188,8 +189,8 @@
     "api-extractor": "api-extractor run --verbose"
   },
   "dependencies": {
-    "preact": "npm:@hongzhiyuan/preact@10.24.0-00213bad",
-    "@preact/signals": "1.3.2"
+    "@preact/signals": "1.3.2",
+    "preact": "npm:@hongzhiyuan/preact@10.24.0-00213bad"
   },
   "devDependencies": {
     "@lynx-js/types": "3.3.0",
